--- a/blog.css
+++ b/blog.css
@@ -4,15 +4,21 @@ header{
 .header-logo img{
   width: 34px;
   height: 34px:
+
 }
 .main-title{
   height: 600px;
 }
-.main-title h1 {
+.big-title h1 {
  font-family: 'Allura', cursive;
  font-size: 80px;
- text-align: center;
- padding-top: 200px
+ display:inline-block;
+ padding-top: 200px;
+ color:black;
+ text-decoration: none;
+ padding-left:500px;
+
+
 }
 
 .top-title {
@@ -37,3 +43,4 @@ footer{
   color:#4dabf7;
   font-size: 1.7em;
 }
+
