--- a/blog.css
+++ b/blog.css
@@ -2,8 +2,10 @@ header{
   height: 0px;
 }
 .header-logo img{
+  display: inline-block;
   width: 34px;
   height: 34px:
+
 
 }
 .main-title{
@@ -17,7 +19,7 @@ header{
  color:black;
  text-decoration: none;
  padding-left:500px;
-
+ 
 
 }
 
@@ -43,4 +45,3 @@ footer{
   color:#4dabf7;
   font-size: 1.7em;
 }
-
