--- a/blog.css
+++ b/blog.css
@@ -1,10 +1,9 @@
 header{
-  height: 0px;
+  height: 50px;
 }
-.header-logo img{
-  display: inline-block;
-  width: 34px;
-  height: 34px:
+header img{
+  width:  50px;
+  height: 50px:
 
 
 }
@@ -14,13 +13,11 @@ header{
 .big-title h1 {
  font-family: 'Allura', cursive;
  font-size: 80px;
- display:inline-block;
+ display: inline-block;
  padding-top: 200px;
  color:black;
  text-decoration: none;
- padding-left:500px;
- 
-
+ padding-left: 330px;
 }
 
 .top-title {
