--- a/blog.css
+++ b/blog.css
@@ -14,10 +14,9 @@ header img{
  font-family: 'Allura', cursive;
  font-size: 80px;
  display: inline-block;
- padding-top: 200px;
  color:black;
  text-decoration: none;
- padding-left: 330px;
+ margin: 200px  487px;
 }
 
 .top-title {
