--- a/blog.css
+++ b/blog.css
@@ -9,6 +9,7 @@ header img{
 }
 .main-title{
   height: 600px;
+  text-align: center; 
 }
 .big-title h1 {
  font-family: 'Allura', cursive;
@@ -16,7 +17,7 @@ header img{
  display: inline-block;
  color:black;
  text-decoration: none;
- margin: 200px  487px;
+ margin-top:200px; 
 }
 
 .top-title {
